# ai-agent-learning

./: .gitignore  pyproject.toml
day1-basic-agent/: 01_first_agent.py  02_custom_tools.py
day1-basic-agent/notes/: Day1_开发日志.md
day2-rag-pipline/: 01_rag_pipline.py  02_chunk_comparison.py
day2-rag-pipline/docs/: product_knowledge.txt
day2-rag-pipline/notes/: Day2_开发日志.md
day3-mcp-server/: 01_product_server.py  02_test_client.py
day3-mcp-server/notes/: Day3_开发日志.md
smart-shooping-agent/: Readme.MD  config.py  graph.py  graph2.py  main.py  main2.py  memory.py  prompts.py  tools.py  workflow.py
smart-shooping-agent/notes/: Day4_开发日志.md  Day5_开发日志.md
